objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Job_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hiring_Manager</fullName>
        <active>true</active>
        <label>Hiring Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiter</fullName>
        <active>true</active>
        <label>Recruiter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular_Contact</fullName>
        <active>true</active>
        <description>This is a regular contact</description>
        <label>Regular Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Zip_Code_Required</fullName>
        <active>false</active>
        <description>Zip Code must be required</description>
        <errorConditionFormula>ISBLANK(MailingPostalCode)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Please Enter Zip Code</errorMessage>
    </validationRules>
</CustomObject>